--- a/lecture00_python_tutorial/EECS445-PythonTutorialExercises.ipynb
+++ b/lecture00_python_tutorial/EECS445-PythonTutorialExercises.ipynb
@@ -116,11 +116,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-ee295b4d5718>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Simple Tests for part (a)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32massert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstring_repeater\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Code\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"CCoCodCode\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32massert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstring_repeater\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"EECS445\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"EEEEECEECSEECS4EECS44EECS445\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# Simple Tests for part (a)\n",
     "assert(string_repeater(\"Code\") == \"CCoCodCode\")\n",
@@ -134,7 +146,7 @@
     "\n",
     "# Simple Tests for part (c)\n",
     "assert(caeser_decipher(\"vjku ku eqfg\", -2) == \"this is code\")\n",
-    "assert(caeser_decipher(\"h khjd bnlotdqr\", 1) == \"i like computers\")\n",
+    "assert(caeser_decipher(\"h khjd bnlotsdqr\", 1) == \"i like computers\")\n",
     "\n",
     "# Simple Tests for part (d)\n",
     "assert(is_palindrome(\"Rats live on no evil star.\"))\n",
