adding all the pdfs, and fixing some location bugs

--- a/lecture00_python_tutorial/EECS445-PythonTutorialExercises.ipynb
+++ b/lecture00_python_tutorial/EECS445-PythonTutorialExercises.ipynb
@@ -468,9 +468,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [py3k]",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "Python [py3k]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
