--- a/lecture00_python_tutorial/lecture00_python_tutorial.ipynb
+++ b/lecture00_python_tutorial/lecture00_python_tutorial.ipynb
@@ -2263,9 +2263,9 @@
   "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [py3k]",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "Python [py3k]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
