--- a/lecture02_linear-algebra-optimization/lecture02_linear-algebra-optimization.ipynb
+++ b/lecture02_linear-algebra-optimization/lecture02_linear-algebra-optimization.ipynb
@@ -1260,7 +1260,7 @@
   "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
