Many changes to ensure compatibility with PDFLaTeX conversion. Primary changes: 1) Switch align environments to aligned and gather environments to gathered. 2) Ensure the use of braces ({}) around multi-character subscripts. 3) Check that the alignment specified matches the one used (number of alginment (&) characters must be length of alginment string - 1. 4) Replace all uses of the \LaTeX command with simply \text{LaTeX}.. 5) Switch uses of \mathbf with \boldsymbol. Added the generated PDF files.

--- a/handsOn_lecture02_linear-algebra-optimization/handsOn02_linear-algebra.ipynb
+++ b/handsOn_lecture02_linear-algebra-optimization/handsOn02_linear-algebra.ipynb
@@ -4,20 +4,6 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "source": [
-    "$$ \\LaTeX \\text{ definitions here.}\n",
-    "\\newcommand{\\R}{\\mathbb{R}}\n",
-    "\\newcommand{\\im}{\\mathrm{im}\\,}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -83,7 +69,7 @@
     "\n",
     "Recall the following definition of matrix multiplication:\n",
     "\n",
-    "> If $x \\in \\R^n$ and $A \\in \\R^{m \\times n}$, then the $i$th entry of $b = Ax \\in \\R^m$ is:\n",
+    "> If $x \\in \\mathbb{R}^n$ and $A \\in \\mathbb{R}^{m \\times n}$, then the $i$th entry of $b = Ax \\in \\mathbb{R}^m$ is:\n",
     "\n",
     "$$\n",
     "b_i = \\sum_{j=1}^n a_{ij} x_j \\quad (i = 1,\\dots,m)\n",
@@ -123,14 +109,14 @@
    "source": [
     "### Problem 1:  Range and Nullspace\n",
     "\n",
-    "Recall that the **range** or **image** of $A \\in \\R^{m \\times n}$ is the set of vectors $y \\in \\R^m$ that can be written as $y=Ax$ for some $x \\in \\R^n$,\n",
+    "Recall that the **range** or **image** of $A \\in \\mathbb{R}^{m \\times n}$ is the set of vectors $y \\in \\mathbb{R}^m$ that can be written as $y=Ax$ for some $x \\in \\mathbb{R}^n$,\n",
     "    \n",
     "$$\n",
-    "\\im A = \\{ y \\in \\R^m \\mid \\exists x \\in \\R^n, y = Ax \\}\n",
+    "\\text{im} \\hspace{0.1cm} \\text{A} = \\{ y \\in \\mathbb{R}^m \\mid \\exists x \\in \\mathbb{R}^n, y = Ax \\}\n",
     "$$\n",
     "\n",
     "<div style=\"margin: 20px; border: 1px solid black; padding: 20px; text-align:center\">\n",
-    "**Problem 1:** Argue that $\\im A$ is the space spanned by the columns of $A$.\n",
+    "**Problem 1:** Argue that $\\text{im} \\hspace{0.1cm} \\text{A}$ is the space spanned by the columns of $A$.\n",
     "</div>\n",
     "\n",
     "> *Hint:*  Use our \"column view\" of matrix-vector multiplication!"
@@ -147,14 +133,14 @@
     "### Solution 1:  Range and Nullspace\n",
     "\n",
     "<div style=\"margin: 20px; border: 1px solid black; padding: 20px; text-align:center\">\n",
-    "**Problem 1:** Argue that $\\im A$ is the space spanned by the columns of $A$.\n",
+    "**Problem 1:** Argue that $\\text{im} \\hspace{0.1cm} \\text{A}$ is the space spanned by the columns of $A$.\n",
     "</div>\n",
     "\n",
-    "Because any $Ax$ is a linear combination of the columns of $A$, any vector $y \\in \\im A$ can be written as a linear combination of the columns of $A$,\n",
+    "Because any $Ax$ is a linear combination of the columns of $A$, any vector $y \\in \\text{im} \\hspace{0.1cm} \\text{A}$ can be written as a linear combination of the columns of $A$,\n",
     "$$\n",
     "y = \\sum_{j=1}^n x_j a_j\n",
     "$$\n",
-    "Forming a vector $x \\in \\R^n$ out of these coefficients $x_j$, we have $y = Ax$, and thus $y \\in \\im A$."
+    "Forming a vector $x \\in \\mathbb{R}^n$ out of these coefficients $x_j$, we have $y = Ax$, and thus $y \\in \\text{im} \\hspace{0.1cm} \\text{A}$."
    ]
   },
   {
@@ -169,7 +155,7 @@
     "\n",
     "The formula for matrix-matrix multiplication probably scares you a little:\n",
     "\n",
-    "> If $A \\in \\R^{\\ell \\times m}$ and $C \\in \\R^{m \\times n}$, then $B = AC \\in \\R^{\\ell \\times n}$ with entries\n",
+    "> If $A \\in \\mathbb{R}^{\\ell \\times m}$ and $C \\in \\mathbb{R}^{m \\times n}$, then $B = AC \\in \\mathbb{R}^{\\ell \\times n}$ with entries\n",
     "\n",
     "$$\n",
     "b_{ij} = \\sum_{k=1}^m a_{ik} c_{kj}\n",
@@ -267,7 +253,7 @@
    "source": [
     "### Review:  Matrix Transposition\n",
     "\n",
-    "Recall that the **transpose** of $A \\in \\R^{m \\times n}$ is $A^T \\in \\R^{n \\times m}$ with indeces \"flipped\",\n",
+    "Recall that the **transpose** of $A \\in \\mathbb{R}^{m \\times n}$ is $A^T \\in \\mathbb{R}^{n \\times m}$ with indeces \"flipped\",\n",
     "$$\n",
     "(A^T)_{ij} = A_{ji}\n",
     "$$\n",
@@ -303,10 +289,10 @@
     "### Solution 3.1:  Matrix Transpose\n",
     "\n",
     "<div style=\"margin: 20px; border: 1px solid black; padding: 20px; text-align:center\">\n",
-    "**Problem 3.1:**  Let $A, B \\in \\R^{n \\times n}$  Is it true that $AB = A^T B^T$?  Either prove it or give a counterexample.\n",
+    "**Problem 3.1:**  Let $A, B \\in \\mathbb{R}^{n \\times n}$  Is it true that $AB = A^T B^T$?  Either prove it or give a counterexample.\n",
     "</div>\n",
     "\n",
-    "False.  Let $A \\in \\R^{n \\times n}$ be any square matrix and $B = I$ be the identity.  Unless $A$ is symmetric, then $AB = A \\neq A^T = A^TB^T$.  There are plenty of asymmetric matrices!  For example,\n",
+    "False.  Let $A \\in \\mathbb{R}^{n \\times n}$ be any square matrix and $B = I$ be the identity.  Unless $A$ is symmetric, then $AB = A \\neq A^T = A^TB^T$.  There are plenty of asymmetric matrices!  For example,\n",
     "\n",
     "$$\n",
     "A = \\begin{bmatrix}\n",
@@ -344,14 +330,14 @@
     "**Problem 3.2:**  Is it true that $(AB)^T = B^T A^T$?  Either prove it or give a counterexample.\n",
     "</div>\n",
     "\n",
-    "True!  Assume $A \\in \\R^{m \\times p}, B \\in \\R^{p \\times n}$.  After verifying that the matrix dimensions match up, we can verify it the brute-force way,\n",
+    "True!  Assume $A \\in \\mathbb{R}^{m \\times p}, B \\in \\mathbb{R}^{p \\times n}$.  After verifying that the matrix dimensions match up, we can verify it the brute-force way,\n",
     "\n",
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{aligned}\n",
     "[(AB)^T]_{ij} &= [AB]_{ji} = \\sum_{k=1}^p a_{jk} b_{ki} \\\\\n",
     "[B^TA^T]_{ij} &= \\sum_{k=1}^p [B^T]_{ik} [A^T]_{kj}\n",
     "               = \\sum_{k=1}^p a_{jk} b_{ki}\n",
-    "\\end{align}\n",
+    "\\end{aligned}\n",
     "$$\n",
     "\n",
     "> Try to interpret this result using what we've learned about matrix-vector products!"
@@ -447,27 +433,19 @@
     "### Problem 4:  Infinity Norm\n",
     "\n",
     "<div style=\"margin: 20px; border: 1px solid black; padding: 20px; text-align:center\">\n",
-    "**Problem 4:** Prove that the infinity norm $||x||_\\infty = \\max_k |x_k|$ is indeed a norm for $x \\in \\R^n$.\n",
+    "**Problem 4:** Prove that the infinity norm $||x||_\\infty = \\max_k |x_k|$ is indeed a norm for $x \\in \\mathbb{R}^n$.\n",
     "</div>\n",
     "\n",
-    "Recall that $|| \\cdot || : \\R^n \\rightarrow \\R$ is a norm if and only if for all $x,y \\in \\R^n$ and $\\alpha \\in \\R$,\n",
+    "Recall that $|| \\cdot || : \\mathbb{R}^n \\rightarrow \\mathbb{R}$ is a norm if and only if for all $x,y \\in \\mathbb{R}^n$ and $\\alpha \\in \\mathbb{R}$,\n",
     "1. $|| x || \\geq 0$\n",
     "2. $||x||=0$ if and only if $x = 0$.\n",
     "2. $|| \\alpha x || = |\\alpha| ||x||$ (Homogeneity)\n",
     "4. $|| x + y || \\leq ||x|| + ||y||$ (Triangle Inequality)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 2",
