--- a/handsOn_lecture03_convex-optimization-probability/handsOn03_convex-optimization-probability.ipynb
+++ b/handsOn_lecture03_convex-optimization-probability/handsOn03_convex-optimization-probability.ipynb
@@ -88,8 +88,7 @@
     "$$\n",
     "    \n",
     "*Hint:*  Use convex definition:\n",
-    "* If $f$ is differentiable, then $f$ is convex iff\n",
-    "$ f(x + y) \\geq f(x) + \\nabla_x f(x) \\cdot y \\quad \\forall x,y$\n",
+    "* If $f$ is differentiable, then $f$ is convex iff $f(x + y) \\geq f(x) + \\nabla_x f(x) \\cdot y \\quad \\forall x,y$\n",
     "\n",
     "* If $f$ is twice-differentiable, then $f$ is convex iff its hessian is always positive semi-definite!"
    ]
@@ -115,12 +114,7 @@
     "$$\n",
     "\n",
     "The Hessian is\n",
-    "$\\mathbf{H} = \n",
-    "\\begin{bmatrix}\n",
-    "   2 & 1 \\\\\n",
-    "   1 & 2\n",
-    "\\end{bmatrix}\n",
-    "$, $\\forall \\mathbf{x} \\in \\mathbb{R}^2$, $\\mathbf{x}^TH\\mathbf{x} = 2x_1^2 + 2x_2^2 + 2x_1x_2 = x_1^2 + x_2^2 + (x_1 + x_2)^2 \\geq 0$\n"
+    "$\\textbf{H} = \\begin{bmatrix} 2 & 1 \\\\ 1 & 2 \\end{bmatrix}$, $\\forall \\mathbf{x} \\in \\mathbb{R}^2$, $\\mathbf{x}^TH\\mathbf{x} = 2x_1^2 + 2x_2^2 + 2x_1x_2 = x_1^2 + x_2^2 + (x_1 + x_2)^2 \\geq 0$\n"
    ]
   },
   {
@@ -162,11 +156,9 @@
    "source": [
     "### Solution 2: Convex Optimization\n",
     "(a) $$\n",
-    "\\begin{array}{ll}\n",
-    "\\mbox{minimize} & f(x) = -x_1 - x_2 \\\\\n",
-    "\\mbox{subject to} & 4x_1 - x_2 - 8 &\\leq 0 \\\\\n",
-    " & 2x_1 + x_2 - 10 &\\leq 0 \\\\\n",
-    " & -5x_1 + x_2 - 2 &\\leq 0\n",
+    "\\begin{array}{lll}\n",
+    "\\mbox{minimize} & f(x) = -x_1 - x_2& \\\\\n",
+    "\\mbox{subject to} & 4x_1 - x_2 - 8 &\\leq 0 \\\\ & 2x_1 + x_2 - 10 &\\leq 0 \\\\ & -5x_1 + x_2 - 2 &\\leq 0 \n",
     "\\end{array}\n",
     "$$"
    ]
@@ -186,9 +178,7 @@
     "* Its Lagrangian is \n",
     "$L(x,\\boldsymbol{\\lambda}, \\boldsymbol{\\nu}) := f(x) + \\sum_{i=1}^m \\lambda_i g_i(x) + \\sum_{j=1}^n \\nu_j h_j(x)$\n",
     "\n",
-    "* The **Langragian dual function** is \n",
-    "$L_D(\\boldsymbol{\\lambda}, \\boldsymbol{\\nu}) \\triangleq \\underset{x}{\\min}L(x,\\boldsymbol{\\lambda}, \\boldsymbol{\\nu}) \\\\\n",
-    "= \\underset{x}{\\min} \\ \\left[ f(x) + \\sum_{i=1}^m \\lambda_i g_i(x) + \\sum_{j=1}^n \\nu_j h_j(x) \\right] $"
+    "* The **Langragian dual function** is $L_D(\\boldsymbol{\\lambda}, \\boldsymbol{\\nu}) \\triangleq \\underset{x}{\\min}L(x,\\boldsymbol{\\lambda}, \\boldsymbol{\\nu}) \\\\ = \\underset{x}{\\min} \\ \\left[ f(x) + \\sum_{i=1}^m \\lambda_ig_i(x) + \\sum_{j=1}^n \\nu_j h_j(x) \\right]$"
    ]
   },
   {
@@ -201,7 +191,7 @@
    "source": [
     "### Solution 2: Convex Optimization\n",
     "(b) $$\n",
-    "\\begin{array}{ll}\n",
+    "\\begin{array}{lll}\n",
     "L(x,\\boldsymbol{\\lambda}, \\boldsymbol{\\nu}) &=& f(x) + \\sum_{i=1}^m \\lambda_i g_i(x) + \\sum_{j=1}^n \\nu_j h_j(x) \\\\\n",
     "&=& -x_1 - x_2 + \\lambda_1(4x_1 - x_2 - 8) + \\\\\n",
     "&&\\lambda_2(2x_1 + x_2 - 10) + \\lambda_3(-5x_1 + x_2 - 2) \\\\\n",
@@ -211,7 +201,7 @@
     "$$\n",
     "Dual problem is\n",
     "$$\n",
-    "\\begin{array}{ll}\n",
+    "\\begin{array}{lll}\n",
     "\\mbox{maximize} & L_D(\\boldsymbol{\\lambda}) &= \\underset{x}{\\min}L(x,\\boldsymbol{\\lambda}) \\\\\n",
     "\\mbox{subject to} & \\lambda_i &\\geq 0\n",
     "\\end{array}\n",
@@ -256,7 +246,7 @@
     "### Problem 3\n",
     "Suppose $x, y$ are discrete variables and the probability distribution is as follows:\n",
     "$$\n",
-    "\\begin{array}{ll}\n",
+    "\\begin{array}{llll}\n",
     " & x = 0 & x = 1 & x = 2 \\\\\n",
     " y = 0 & 0.1 & 0.2 & 0.3 \\\\\n",
     " y = 1 & 0.2 & 0.1 & 0.1\n",
@@ -289,7 +279,7 @@
     "\n",
     "(b) Compute $p(x = 4)$.\n",
     "\n",
-    "(c) Using Bayse' Rule, compute $p(y|x = 4)$."
+    "(c) Using Bayse' Rule, compute $p(y \\mid x = 4)$."
    ]
   },
   {
@@ -316,7 +306,7 @@
    },
    "source": [
     "(b) $$\n",
-    "\\begin{array}{ll}\n",
+    "\\begin{array}{lll}\n",
     "p(x = 4) &=& \\int_{y}{p(x = 4, y)} \\\\\n",
     "&=& \\int_{y}{\\frac{1}{\\sqrt{2}\\pi}\\exp\\{-\\frac{1}{2}(16 + 4y + 2y^2)\\}} \\\\\n",
     "&=& \\int_{y}{\\frac{1}{\\sqrt{2}\\pi}\\exp\\{-\\frac{1}{2}(14 + 2(y + 1)^2)\\}} \\\\\n",
@@ -460,6 +450,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 2",
