--- a/lecture03_convex-functions-optimization/lecture03_Convex-Functions-and-Optimization.ipynb
+++ b/lecture03_convex-functions-optimization/lecture03_Convex-Functions-and-Optimization.ipynb
@@ -272,8 +272,8 @@
     "& \\text{subject to} & & \\lambda_i, \\nu_j \\geq 0 \\quad i = 1, \\ldots, m ,\\ j = 1, ..., n\\\\\n",
     "\\end{aligned}\n",
     "$$\n",
-    "Instead of solving primal problem with respect to $x$, we now need to solve dual problem with respect to $\\mathbf{\\lambda}$ and $\\mathbf{\\nu}$\n",
-    "* $ L_D(\\mathbf{\\lambda}, \\mathbf{\\nu})$ is concave even if primal problem is not convex\n",
+    "Instead of solving primal problem with respect to $x$, we now need to solve dual problem with respect to $\\boldsymbol{\\lambda}$ and $\\boldsymbol{\\nu}$\n",
+    "* $L_D(\\boldsymbol{\\lambda}, \\boldsymbol{\\nu})$ is concave even if primal problem is not convex\n",
     "* Let the $p^*$ and $d^*$ denote the optimal values of primal problem and dual problem, we always have *weak duality*: $p^* \\geq d^*$\n",
     "* Under nice conditions, we get *strong duality*: $p^* = d^*$\n",
     "* Many details are ommited here and they will come when we study **support vector machine (SVM)**"
