--- a/lecture04_linear-regression-part1/lecture04_final_linear-regression-part-1.ipynb
+++ b/lecture04_linear-regression-part1/lecture04_final_linear-regression-part-1.ipynb
@@ -1,22 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "source": [
-    "$$ \\LaTeX \\text{ command declarations here.}\n",
-    "\\newcommand{\\R}{\\mathbb{R}}\n",
-    "\\renewcommand{\\vec}[1]{\\mathbf{#1}}\n",
-    "$$"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -108,10 +94,10 @@
     "## Notation\n",
     "\n",
     "- In this lecture, we will use\n",
-    "    - Let vector $\\vec{x}_n \\in \\R^D$ denote the $n\\text{th}$ data. $D$ denotes number of attributes in dataset.\n",
-    "    - Let vector $\\phi(\\vec{x}_n) \\in \\R^M$ denote features for data $\\vec{x}_n$. $\\phi_j(\\vec{x}_n)$ denotes the $j\\text{th}$ feature for data $x_n$.\n",
+    "    - Let vector $\\vec{x}_n \\in \\mathbb{R}^D$ denote the $n\\text{th}$ data. $D$ denotes number of attributes in dataset.\n",
+    "    - Let vector $\\phi(\\vec{x}_n) \\in \\mathbb{R}^M$ denote features for data $\\vec{x}_n$. $\\phi_j(\\vec{x}_n)$ denotes the $j\\text{th}$ feature for data $x_n$.\n",
     "    - Feature $\\phi(\\vec{x}_n)$ is the *artificial* features which represents the preprocessing step. $\\phi(\\vec{x}_n)$ is usually some combination of transformations of $\\vec{x}_n$. For example, $\\phi(\\vec{x})$ could be vector constructed by $[\\vec{x}_n^T, \\cos(\\vec{x}_n)^T, \\exp(\\vec{x}_n)^T]^T$. If we do nothing to $\\vec{x}_n$, then $\\phi(\\vec{x}_n)=\\vec{x}_n$.\n",
-    "    - Continuous-valued label vector $t \\in \\R^D$ (target values). $t_n \\in \\R$ denotes the target value for $i\\text{th}$ data."
+    "    - Continuous-valued label vector $t \\in \\mathbb{R}^D$ (target values). $t_n \\in \\mathbb{R}$ denotes the target value for $i\\text{th}$ data."
    ]
   },
   {
@@ -154,7 +140,7 @@
     "### Linear Regression (1D Inputs)\n",
     "\n",
     "- Consider 1D case (i.e. D=1)\n",
-    "    - Given a set of observations $x_1, \\dots, x_N \\in \\R^M$\n",
+    "    - Given a set of observations $x_1, \\dots, x_N \\in \\mathbb{R}^M$\n",
     "    - and corresponding target values $t_1, \\dots, t_N$\n",
     "- We want to learn a function $y(x_n, \\vec{w}) \\approx t_n$ to predict future values.\n",
     "$$\n",
@@ -281,12 +267,12 @@
     "    - **Goal:** Find the best value for the weights $\\vec{w}$.\n",
     "    - For simplicity, add a **bias term** $\\phi_0(\\vec{x}_n) = 1$.\n",
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{aligned}\n",
     "y(\\vec{x}_n, \\vec{w})\n",
     "&= w_0 \\phi_0(\\vec{x}_n)+w_1 \\phi_1(\\vec{x}_n)+ w_2 \\phi_2(\\vec{x}_n)+\\dots +w_{M-1} \\phi_{M-1}(\\vec{x}_n) \\\\\n",
     "&= \\sum_{j=0}^{M-1} w_j \\phi_j(\\vec{x}_n) \\\\\n",
     "&= \\vec{w}^T \\phi(\\vec{x}_n)\n",
-    "\\end{align}\n",
+    "\\end{aligned}\n",
     "$$\n",
     "of which $\\phi(\\vec{x}_n) = [\\phi_0(\\vec{x}_n),\\phi_1(\\vec{x}_n),\\phi_2(\\vec{x}_n), \\dots, \\phi_{M-1}(\\vec{x}_n)]^T$\n"
    ]
@@ -341,16 +327,16 @@
     "#### Method I: Gradient Descent—Gradient Calculation\n",
     "- To minimize the objective function, take derivative w.r.t coefficient vector $\\vec{w}$:\n",
     "$$\n",
-    "\\begin{align}\n",
-    "\\nabla_\\vec{w} E(\\vec{w})\n",
+    "\\begin{aligned}\n",
+    "\\nabla_{\\vec{w}} E(\\vec{w})\n",
     "&= \\frac{\\partial}{\\partial \\vec{w}} \\left[ \\frac12 \\sum_{n=1}^N \\left( \\vec{w}^T \\phi(\\vec{x}_n) - t_n \\right)^2 \\right] \\\\\n",
     "&= \\sum_{n=1}^N \\frac{\\partial}{\\partial \\vec{w}} \\left[ \\frac12 \\left( \\vec{w}^T\\phi(x_n) - t_n \\right)^2 \\right] \\\\\n",
     "\\text{Applying chain rule:}\n",
     "&= \\sum_{n=1}^N \\left[ \\frac12 \\cdot 2 \\cdot  \\left( \\vec{w}^T\\phi(x_n) - t_n \\right) \\cdot \\frac{\\partial}{\\partial \\vec{w}} \\vec{w}^T\\phi(x_n) \\right] \\\\\n",
     "&= \\sum_{n=1}^N \\left( \\vec{w}^T\\phi(x_n) - t_n \\right)\\phi(x_n)\n",
-    "\\end{align}\n",
+    "\\end{aligned}\n",
     "$$\n",
-    "- Since we are taking derivative of a scalar $E(\\vec{w})$ w.r.t a vector $\\vec{w}$, the derivative $\\nabla_\\vec{w} E(\\vec{w})$ will be a vector.\n",
+    "- Since we are taking derivative of a scalar $E(\\vec{w})$ w.r.t a vector $\\vec{w}$, the derivative $\\nabla_{\\vec{w}} E(\\vec{w})$ will be a vector.\n",
     "- For details about matrix/vector derivative, please refer to appendix attached in the end of the slide."
    ]
   },
@@ -366,10 +352,10 @@
     "- **Input**: Given dataset $\\{(\\vec{x}_n, t_n)\\}_{n=1}^N$\n",
     "- **Initialize**: $\\vec{w}_0$, learning rate $\\eta$\n",
     "- **Repeat** until convergence:\n",
-    "    - $\\nabla_\\vec{w} E(\\vec{w}_\\text{old}) = \\sum_{n=1}^N \\left( \\vec{w}_\\text{old}^T\\phi(\\vec{x}_n) - t_n \\right)\\phi(\\vec{x}_n)$\n",
-    "    - $\\vec{w}_\\text{new} = \\vec{w}_\\text{old}-\\eta \\nabla_\\vec{w} E(\\vec{w}_\\text{old})$\n",
+    "    - $\\nabla_{\\vec{w}} E(\\vec{w}_{\\text{old}}) = \\sum_{n=1}^N \\left( \\vec{w}_{\\text{old}}^T\\phi(\\vec{x}_n) - t_n \\right)\\phi(\\vec{x}_{n})$\n",
+    "    - $\\vec{w}_{\\text{new}} = \\vec{w}_{\\text{old}}-\\eta \\nabla_{\\vec{w}} E(\\vec{w}_{\\text{old}})$\n",
     "- **End**\n",
-    "- **Output**: $\\vec{w}_\\text{final}$"
+    "- **Output**: $\\vec{w}_{\\text{final}}$"
    ]
   },
   {
@@ -388,11 +374,11 @@
     "- **Repeat** until convergence:\n",
     "    - Random shuffle $\\{(\\vec{x}_n, t_n)\\}_{n=1}^N$\n",
     "    - **For** $n=1,\\dots,N$ **do**:\n",
-    "        - $\\nabla_{\\vec{w}}E(\\vec{w}_\\text{old} | \\vec{x}_n) = \\left( \\vec{w}_\\text{old}^T\\phi(\\vec{x}_n) - t_n \\right)\\phi(\\vec{x}_n)$\n",
-    "        - $\\vec{w}_\\text{new} = \\vec{w}_\\text{old}-\\eta \\nabla_{\\vec{w}}E(\\vec{w}_\\text{old} | \\vec{x}_n)$\n",
+    "        - $\\nabla_{\\vec{w}}E(\\vec{w}_{\\text{old}} | \\vec{x}_n) = \\left( \\vec{w}_{\\text{old}}^T\\phi(\\vec{x}_n) - t_n \\right)\\phi(\\vec{x}_n)$\n",
+    "        - $\\vec{w}_{\\text{new}} = \\vec{w}_{\\text{old}}-\\eta \\nabla_{\\vec{w}}E(\\vec{w}_{\\text{old}} | \\vec{x}_n)$\n",
     "    - **End**\n",
     "- **End**\n",
-    "- **Output**: $\\vec{w}_\\text{final}$"
+    "- **Output**: $\\vec{w}_{\\text{final}}$"
    ]
   },
   {
@@ -406,11 +392,11 @@
     "> **Remark   **\n",
     ">    - The derivative is computed as followimg:\n",
     "    $$\n",
-    "    \\begin{align}\n",
-    "    \\nabla_\\vec{w}E(\\vec{w} | \\vec{x}_n)\n",
+    "    \\begin{aligned}\n",
+    "    \\nabla_{\\vec{w}}E(\\vec{w} | \\vec{x}_n)\n",
     "    &= \\frac{\\partial}{\\partial \\vec{w}} \\left[ \\frac12 \\left( \\vec{w}^T \\phi(\\vec{x}_n) - t_n \\right)^2 \\right] \\\\\n",
     "    &= \\left( \\vec{w}^T\\phi(\\vec{x}_n) - t_n \\right)\\phi(\\vec{x}_n)\n",
-    "    \\end{align}\n",
+    "    \\end{aligned}\n",
     "    $$\n",
     "\n",
     ">    - This derivative w.r.t individual sample is just one summand of gradient in batch gradient descent.\n",
@@ -445,7 +431,7 @@
     "\\end{bmatrix}\n",
     "\\triangleq \\Phi \\vec{w}-\\vec{t}\n",
     "$$\n",
-    "Here $\\Phi \\in \\R^{N \\times M}$ is called **design matrix**. Each row represents one sample. Each column represents one feature\n",
+    "Here $\\Phi \\in \\mathbb{R}^{N \\times M}$ is called **design matrix**. Each row represents one sample. Each column represents one feature\n",
     "$$\\Phi = \\begin{bmatrix}\n",
     "\\phi(\\vec{x}_1)^T\\\\ \n",
     "\\phi(\\vec{x}_2)^T\\\\ \n",
@@ -471,13 +457,13 @@
    "source": [
     "- From $E(\\vec{w}) = \\frac12 \\left \\| \\vec{e} \\right \\|^2 = \\frac12 \\vec{e}^T \\vec{e}$ and $\\vec{e}=\\Phi \\vec{w}-\\vec{t}$, we have\n",
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{aligned}\n",
     "E(\\vec{w}) \n",
     "& = \\frac12 \\left \\| \\Phi \\vec{w}-\\vec{t} \\right \\|^2=\\frac12 (\\Phi \\vec{w}-\\vec{t})^T (\\Phi \\vec{w}-\\vec{t}) \\\\\n",
     "& = \\frac12 \\vec{w}^T \\Phi^T \\Phi \\vec{w} - \\vec{t}^T \\Phi \\vec{w} + \\frac12 \\vec{t}^T \\vec{t}\n",
-    "\\end{align}\n",
+    "\\end{aligned}\n",
     "$$\n",
-    "- So the derivative is $$\\nabla_\\vec{w} E(\\vec{w}) = \\Phi^T\\Phi\\vec{w} - \\Phi^T \\vec{t}$$"
+    "- So the derivative is $$\\nabla_{\\vec{w}} E(\\vec{w}) = \\Phi^T\\Phi\\vec{w} - \\Phi^T \\vec{t}$$"
    ]
   },
   {
@@ -491,11 +477,11 @@
     "> **Remark**\n",
     ">    - Note that this derivative can simply be obtained from the derivative we just derived in gradient descent method, which is\n",
     "$$\n",
-    "\\begin{align}\n",
-    "\\nabla_\\vec{w} E(\\vec{w}) \n",
+    "\\begin{aligned}\n",
+    "\\nabla_{\\vec{w}} E(\\vec{w}) \n",
     "&= \\sum_{n=1}^N \\left( \\vec{w}^T\\phi(x_n) - t_n \\right)\\phi(x_n) & \\text{non-matrix/vector form}  \\\\\n",
     "&= \\Phi^T\\Phi \\vec{w} - \\Phi^T \\vec{t} & \\text{matrix/vector form} \n",
-    "\\end{align}\n",
+    "\\end{aligned}\n",
     "$$\n",
     ">    - For gradient descent and closed form solution we obtain the derivative from two different perspectives, **non-matrix/vector** form and **matrix/vector** form. You could choose whichever you like when in use. We suggest matrix/vector form which is more neat.\n",
     ">    - From $\\vec{e}=\\Phi \\vec{w}-\\vec{t}$, we know that $\\Phi \\vec{w}$ is the prediction of training samples and $\\vec{e}$ is just the residual error. What we are doing in least squares is just making prediction of training samples as close to training labels as possible, i.e. $\\Phi \\vec{w} \\approx \\vec{t}$"
@@ -509,14 +495,14 @@
     }
    },
    "source": [
-    "- To minimize $E(\\vec{w})$, we need to let $\\nabla_\\vec{w} E(\\vec{w}) = \\Phi^T\\Phi \\vec{w} - \\Phi^T \\vec{t} = 0$, which is also $\\Phi^T\\Phi \\vec{w} = \\Phi^T \\vec{t}$\n",
+    "- To minimize $E(\\vec{w})$, we need to let $\\nabla_{\\vec{w}} E(\\vec{w}) = \\Phi^T\\Phi \\vec{w} - \\Phi^T \\vec{t} = 0$, which is also $\\Phi^T\\Phi \\vec{w} = \\Phi^T \\vec{t}$\n",
     "- When $\\Phi^T \\Phi$ is **invertible** ($\\Phi$ has *linearly independent columns*), we simply have \n",
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{aligned}\n",
     "\\hat{\\vec{w}}\n",
     "&=(\\Phi^T \\Phi)^{-1} \\Phi^T \\vec{t} \\\\\n",
     "&\\triangleq \\Phi^\\dagger \\vec{t}\n",
-    "\\end{align}\n",
+    "\\end{aligned}\n",
     "$$\n",
     "of which $\\Phi^\\dagger$ is called the **Moore-Penrose Pseudoinverse** of $\\Phi$.\n",
     "- We will talk about case $\\Phi^T \\Phi$ is **non-invertible** later."
@@ -546,7 +532,7 @@
     "#### Digression: Moore-Penrose Pseudoinverse\n",
     "- When we have a matrix $A$ that is non-invertible or *not even square*, we might want to invert anyway\n",
     "- For these situations we use $A^\\dagger$, the **Moore-Penrose Pseudoinverse** of $A$\n",
-    "- In general, we can get $A^\\dagger$ by SVD: if we write $A \\in \\R^{m \\times n} = U_{m \\times m} \\Sigma_{m \\times n} V_{n \\times n}^T$ then $A^\\dagger \\in \\R^{n \\times m} = V \\Sigma^\\dagger U^T$, where $\\Sigma^\\dagger \\in \\R^{n \\times m}$ is obtained by taking reciprocals of *non-zero entries* of $\\Sigma^T$.\n",
+    "- In general, we can get $A^\\dagger$ by SVD: if we write $A \\in \\mathbb{R}^{m \\times n} = U_{m \\times m} \\Sigma_{m \\times n} V_{n \\times n}^T$ then $A^\\dagger \\in \\mathbb{R}^{n \\times m} = V \\Sigma^\\dagger U^T$, where $\\Sigma^\\dagger \\in \\mathbb{R}^{n \\times m}$ is obtained by taking reciprocals of *non-zero entries* of $\\Sigma^T$.\n",
     "- Particularly, when $A$ has linearly independent columns then $A^\\dagger = (A^T A)^{-1} A^T$. When $A$ is invertible, then $A^\\dagger = A^{-1}$."
    ]
   },
@@ -577,7 +563,7 @@
     "- From previous derivation, we have $\\hat{w}=(\\Phi^T \\Phi)^{-1} \\Phi^T \\vec{t} \\triangleq \\Phi^\\dagger \\vec{t}$.\n",
     "- What if $\\Phi^T \\Phi$ is non-invertible? This corresponds to the case where $\\Phi$ doesn't have linearly independent columns. For dataset, this means the feature vector of certain sample is the linear combination of feature vectors of some other samples.\n",
     "- We could still resolve this using pseudoinverse.\n",
-    "- To make $\\nabla_\\vec{w} E(\\vec{w}) = \\Phi^T\\Phi \\vec{w} - \\Phi^T \\vec{t} = 0$, we have\n",
+    "- To make $\\nabla_{\\vec{w}} E(\\vec{w}) = \\Phi^T\\Phi \\vec{w} - \\Phi^T \\vec{t} = 0$, we have\n",
     "$$ \\hat{\\vec{w}} = (\\Phi^T\\Phi)^\\dagger \\Phi^T \\vec{t} = \\Phi^\\dagger \\vec{t}$$\n",
     "of which $(\\Phi^T\\Phi)^\\dagger\\Phi^T = \\Phi^\\dagger$. This is left as an exercise. (**Hint:** use SVD)\n",
     "- Now we could conclude the optimal $\\vec{w}$ in the sense that minimizes sum of squared errors is $$\\boxed{\\hat{\\vec{w}} = \\Phi^\\dagger \\vec{t}}$$"
@@ -592,7 +578,7 @@
    },
    "source": [
     ">**Remark**\n",
-    "> - In the above derivation, we get $\\hat{\\vec{w}} = \\Phi^\\dagger \\vec{t}$ by letting the derivative $\\nabla_\\vec{w} E(\\vec{w})=0$. Actually, $\\hat{\\vec{w}}=\\Phi^\\dagger \\vec{t}$ is just the solution to $\\Phi \\vec{w} = \\vec{t}$ in the sense that $\\left \\| \\Phi\\vec{w} - \\vec{t} \\right \\|_2^2$ is minimized. Meanwhile, among all the minimizers that achieve the same minimal value of $\\left \\| \\Phi\\vec{w} - \\vec{t} \\right \\|_2^2$, $\\hat{\\vec{w}}$ has the smallest norm $\\left \\| \\vec{w} \\right \\|_2$.\n",
+    "> - In the above derivation, we get $\\hat{\\vec{w}} = \\Phi^\\dagger \\vec{t}$ by letting the derivative $\\nabla_{\\vec{w}} E(\\vec{w})=0$. Actually, $\\hat{\\vec{w}}=\\Phi^\\dagger \\vec{t}$ is just the solution to $\\Phi \\vec{w} = \\vec{t}$ in the sense that $\\left \\| \\Phi\\vec{w} - \\vec{t} \\right \\|_2^2$ is minimized. Meanwhile, among all the minimizers that achieve the same minimal value of $\\left \\| \\Phi\\vec{w} - \\vec{t} \\right \\|_2^2$, $\\hat{\\vec{w}}$ has the smallest norm $\\left \\| \\vec{w} \\right \\|_2$.\n",
     "> - Now that we have neat and closed form solution to least squares, why do we introduce gradient descent method?\n",
     ">     - $\\hat{w}=(\\Phi^T \\Phi)^{-1} \\Phi^T \\vec{t}$ involves matrix inversion. It could be quite computationally expensive when the dimension $M$ is high. On the other hand, gradient descent involves nothing but matrix multiplication which can be computed much faster."
    ]
@@ -607,14 +593,14 @@
    "source": [
     "## Appendix I: Differential Operation in Matrix Calculus\n",
     "### General Gradient\n",
-    "- Suppose that $f : \\R^{m \\times n} \\rightarrow \\R$, that is, the function $f$\n",
-    "    - takes as input a matrix $A \\in \\R^{m\\times n} = [a_{ij}]$\n",
+    "- Suppose that $f : \\mathbb{R}^{m \\times n} \\rightarrow \\mathbb{R}$, that is, the function $f$\n",
+    "    - takes as input a matrix $A \\in \\mathbb{R}^{m\\times n} = [a_{ij}]$\n",
     "    - returns a real value\n",
     "\n",
     "- Then, the **gradient** of $f$ with respect to $A$ is:\n",
     "\n",
     "$$\n",
-    "\\nabla_A f(A) \\in \\R^{m \\times n} = \\begin{bmatrix}\n",
+    "\\nabla_A f(A) \\in \\mathbb{R}^{m \\times n} = \\begin{bmatrix}\n",
     "%\n",
     "\\frac{\\partial f}{\\partial a_{11}}\n",
     "    & \\frac{\\partial f}{\\partial a_{12}} \n",
@@ -640,9 +626,9 @@
     "$$\n",
     "\n",
     "- Note that the size of $\\nabla_A f(A)$ is always the same as the size of $A$.  \n",
-    "- In particular, if $A$ is a vector $\\vec{x} \\in \\R^n$,\n",
+    "- In particular, if $A$ is a vector $\\vec{x} \\in \\mathbb{R}^n$,\n",
     "$$\n",
-    "\\nabla_\\vec{x} f(\\vec{x}) = \\begin{bmatrix}\n",
+    "\\nabla_{\\vec{x}} f(\\vec{x}) = \\begin{bmatrix}\n",
     "    \\frac{\\partial f}{\\partial \\vec{x}_1} \\\\\n",
     "    \\frac{\\partial f}{\\partial \\vec{x}_2} \\\\\n",
     "    \\cdots \\\\\n",
@@ -650,9 +636,9 @@
     "\\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "- The gradient is a **linear operator** from $\\R^n \\mapsto \\R^n$:\n",
-    "    - $ \\nabla_x (f + g) = \\nabla_x f + \\nabla_x g $\n",
-    "    - $ \\forall\\, c \\in \\R, \\nabla_x (c f) = c \\nabla_x f$\n",
+    "- The gradient is a **linear operator** from $\\mathbb{R}^n \\mapsto \\mathbb{R}^n$:\n",
+    "    - $\\nabla_{x}(f + g) = \\nabla_{x} f + \\nabla_{x} g$\n",
+    "    - $\\forall\\, c \\in \\mathbb{R}, \\nabla_{x} (c f) = c \\nabla_x f$\n",
     "\n",
     "### Gradient of Linear Functions\n",
     "- The gradient of the **linear function** $f(\\vec{x}) = \\sum_{k=1}^n b_k x_k = \\vec{b}^T \\vec{x}$ is\n",
@@ -664,15 +650,15 @@
     "$$\n",
     "- Compact form\n",
     "$$\n",
-    "\\nabla_\\vec{x} \\vec{b}^T \\vec{x} = \\vec{b}\n",
+    "\\nabla_{\\vec{x}} \\vec{b}^T \\vec{x} = \\vec{b}\n",
     "$$\n",
     "- Similarly,\n",
     "$$\n",
-    "\\nabla_\\vec{x} \\vec{x}^T \\vec{b} = \\vec{b}\n",
+    "\\nabla_{\\vec{x}} \\vec{x}^T \\vec{b} = \\vec{b}\n",
     "$$\n",
     "\n",
     "### Gradient of Quadratic Forms\n",
-    "- Every symmetric $A \\in \\R^{n \\times n}$ corresponds to a **quadratic form**:\n",
+    "- Every symmetric $A \\in \\mathbb{R}^{n \\times n}$ corresponds to a **quadratic form**:\n",
     "    $$ f(x) = \\sum_{i=1}^n \\sum_{j=1}^n x_i A_{ij} x_j = \\vec{x}^T A \\vec{x} $$\n",
     "- The partial derivatives are\n",
     "    $$ \n",
@@ -680,7 +666,7 @@
     "    = 2 \\sum_{j=1}^n A_{ij} x_j\n",
     "    = 2 [A\\vec{x}]_i\n",
     "    $$\n",
-    "- Compact form $$\\nabla_\\vec{x} \\vec{x}^T A \\vec{x} = 2 A \\vec{x}$$"
+    "- Compact form $$\\nabla_{\\vec{x}} \\vec{x}^T A \\vec{x} = 2 A \\vec{x}$$"
    ]
   },
   {
@@ -692,16 +678,17 @@
    },
    "source": [
     "## Appendix II:  Geometric Interpretation of Least Squares\n",
-    "- Assume number of samples is much larger than number of features, i.e. $N>>M$ ($\\Phi \\in \\R^{N \\times M}$ is a *tall* matrix).\n",
+    "- Assume number of samples is much larger than number of features, i.e. $N>>M$ ($\\Phi \\in \\mathbb{R}^{N \\times M}$ is a *tall* matrix).\n",
     "- The columns of $\\Phi$ construct a $M$-dimensional subspace $\\mathcal{S}$.\n",
     "- Target $\\mathbf t = (t_1, \\dots, t_N)$ is a vector in $N$-dimensional space\n",
     "- Prediction $\\vec{y}(\\mathcal{D}, \\vec{w}) = \\Phi \\vec{w} \\in \\mathcal{S}$.\n",
-    "- The prediction $\\hat{\\vec{y}} (\\mathcal{D}, \\hat{\\vec{w}})$ we get via least squares is the projection of $\\vec{t}$ onto $\\mathcal{S}$. In other words, of all $\\vec{w} \\in \\R^{M}$, $\\hat{\\vec{w}}$ has smallest $\\left \\| \\Phi \\vec{w} \\right \\|$.    \n",
+    "- The prediction $\\hat{\\vec{y}} (\\mathcal{D}, \\hat{\\vec{w}})$ we get via least squares is the projection of $\\vec{t}$ onto $\\mathcal{S}$. In other words, of all $\\vec{w} \\in \\mathbb{R}^{M}$, $\\hat{\\vec{w}}$ has smallest $\\left \\| \\Phi \\vec{w} \\right \\|$.    \n",
     "<center> <img src=\"images/least-squares-projection.png\"  style=\"width:404px;height:228px;\"> </center>"
    ]
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python [Root]",
