--- a/lecture05_linear-regression-part2/lecture05_final_linear-regression-part-2.ipynb
+++ b/lecture05_linear-regression-part2/lecture05_final_linear-regression-part-2.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "$$ \\LaTeX \\text{ command declarations here.}\n",
+    "$$ \\text{LaTeX command declarations here.}\n",
     "\\newcommand{\\R}{\\mathbb{R}}\n",
     "\\renewcommand{\\vec}[1]{\\mathbf{#1}}\n",
     "$$"
@@ -492,20 +492,20 @@
     "### Regularized Least Squares: Derivation\n",
     "- Based on what we have derived in last lecture, we could write the objective function as\n",
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{aligned}\n",
     "E(\\vec{w}) \n",
     "&= \\frac12 \\sum_{n=1}^N \\left( \\vec{w}^T \\phi(\\vec{x}_n) - t_n \\right)^2 + \\frac{\\lambda}{2} \\left \\| \\vec{w} \\right \\|^2 \\\\\n",
     "&= \\frac12 \\vec{w}^T \\Phi^T \\Phi \\vec{w} - \\vec{t}^T \\Phi \\vec{w} + \\frac12 \\vec{t}^T \\vec{t} + \\frac{\\lambda}{2}\\vec{w}^T\\vec{w}\n",
-    "\\end{align}\n",
+    "\\end{aligned}\n",
     "$$\n",
     "\n",
     "- The gradient is\n",
     "$$\n",
-    "\\begin{align}\n",
-    "\\nabla_\\vec{w} E(\\vec{w}) \n",
+    "\\begin{aligned}\n",
+    "\\nabla_{\\vec{w}} E(\\vec{w}) \n",
     "&= \\Phi^T \\Phi \\vec{w} - \\Phi^T \\vec{t} + \\lambda \\vec{w}\\\\\n",
     "&= (\\Phi^T \\Phi + \\lambda I)\\vec{w} - \\Phi^T \\vec{t}\n",
-    "\\end{align}\n",
+    "\\end{aligned}\n",
     "$$\n",
     "\n",
     "- Setting the gradient to 0, we will get the solution\n",
@@ -841,10 +841,10 @@
     "\n",
     "- We assume the **signal+noise** model of single data $(\\vec{x}, t)$ is\n",
     "    $$\n",
-    "    \\begin{gather}\n",
+    "    \\begin{gathered}\n",
     "    t = \\vec{w}^T \\phi(\\vec{x}) + \\epsilon \\\\ \n",
     "    \\epsilon \\sim \\mathcal{N}(0, \\beta^{-1})\n",
-    "    \\end{gather}\n",
+    "    \\end{gathered}\n",
     "    $$\n",
     "    of which $\\vec{w}^T \\phi(\\vec{x})$ is the true model, $\\epsilon$ is the perturbation/randomness.\n",
     "\n",
@@ -917,11 +917,11 @@
     "\n",
     "- Complete data log-likelohood is\n",
     "    $$\n",
-    "    \\begin{align}\n",
+    "    \\begin{aligned}\n",
     "    \\ln p(\\vec{t}|\\mathcal{X},\\vec{w},\\beta) \n",
     "    &= \\ln \\left[ \\prod_{n=1}^N p(t_n|\\vec{x}_n,\\vec{w},\\beta) \\right] = \\sum_{n=1}^N \\ln p(t_n|\\vec{x}_n,\\vec{w},\\beta) \\\\\n",
     "    &= \\sum_{n=1}^N \\left[ - \\frac12 \\ln 2 \\pi \\beta^{-1} - \\frac{\\beta}{2} (\\vec{w}^T \\phi(x_n) - t_n)^2 \\right]\n",
-    "    \\end{align}\n",
+    "    \\end{aligned}\n",
     "    $$\n"
    ]
   },
@@ -935,13 +935,13 @@
    "source": [
     "- Maximum likelihood estimate $\\vec{w}_{ML}$ is\n",
     "    $$\n",
-    "    \\begin{align}\n",
+    "    \\begin{aligned}\n",
     "    \\vec{w}_{ML} \n",
     "    &= \\underset{\\vec{w}}{\\arg \\max} \\ln p(\\vec{t}|\\mathcal{X},\\vec{w},\\beta) \\\\\n",
     "    &= \\underset{\\vec{w}}{\\arg \\max}  \\sum_{n=1}^N \\left[ - \\frac12 \\ln 2 \\pi \\beta^{-1} - \\frac{\\beta}{2} (\\vec{w}^T \\phi(x_n) - t_n)^2 \\right] \\\\\n",
     "    &= \\underset{\\vec{w}}{\\arg \\max}  \\sum_{n=1}^N \\left[ - \\frac{\\beta}{2} (\\vec{w}^T \\phi(x_n) - t_n)^2 \\right] \\\\\n",
     "    &= \\underset{\\vec{w}}{\\arg \\min}  \\sum_{n=1}^N \\left[(\\vec{w}^T \\phi(x_n) - t_n)^2 \\right]\n",
-    "    \\end{align}\n",
+    "    \\end{aligned}\n",
     "    $$\n",
     "\n",
     "- Familiar? Recall the objective function we minimized in least squares is $E(\\vec{w}) = \\frac12 \\sum_{n=1}^N \\left( \\vec{w}^T \\phi(\\vec{x}_n) - t_n \\right)^2$, so we could conclude that\n",
@@ -961,7 +961,7 @@
     "### MAP Estimator $\\vec{w}_{MAP}$\n",
     "- The **MAP estimator** is obtained by\n",
     "    $$\n",
-    "    \\begin{align}\n",
+    "    \\begin{aligned}\n",
     "    \\vec{w}_{MAP} \n",
     "    &= \\arg \\max p(\\vec{w}|\\vec{t}, \\mathcal{X},\\beta) & & (\\text{Posteriori Probability})\\\\\n",
     "    &= \\arg \\max \\frac{p(\\vec{w}, \\vec{t}, \\mathcal{X},\\beta)}{p(\\mathcal{X}, t, \\beta)} \\\\\n",
@@ -969,7 +969,7 @@
     "    &= \\arg \\max p(\\vec{t}|\\vec{w}, \\mathcal{X},\\beta) p(\\vec{w}, \\mathcal{X}, \\beta) & & (p(X, t, \\beta) \\text{ is irrelevant to} \\ \\vec{w})\\\\\n",
     "    &= \\arg \\max p(\\vec{t}|\\vec{w}, \\mathcal{X},\\beta) p(\\vec{w}) p(\\mathcal{X}) p(\\beta) & & (\\text{Independence}) \\\\\n",
     "    &= \\arg \\max p(\\vec{t}|\\vec{w}, \\mathcal{X},\\beta) p(\\vec{w}) & & (\\text{Likelihood} \\times \\text{Prior})\n",
-    "    \\end{align}\n",
+    "    \\end{aligned}\n",
     "    $$\n",
     "    We are just using **Bayes Theorem** for the above steps.\n",
     "- The only difference from ML estimator is we have an extra term of PDF of $\\vec{w}$. This is the **prior belief** of $\\vec{w}$. Here, we assume, \n",
@@ -1015,12 +1015,12 @@
     "\n",
     "- So the MAP estimator is \n",
     "    $$\n",
-    "    \\begin{align}\n",
+    "    \\begin{aligned}\n",
     "     \\vec{w}_{MAP} \n",
     "     &= \\underset{\\vec{w}}{\\arg \\max} \\ p(\\vec{t}|\\vec{w}, \\mathcal{X},\\beta) p(\\vec{w}) = \\underset{\\vec{w}}{\\arg \\max} \\left[\\ln p(\\vec{t}|\\vec{w}, \\mathcal{X},\\beta) + \\ln p(\\vec{w}) \\right] \\\\\n",
     "     &= \\underset{\\vec{w}}{\\arg \\min} \\left[ \\sum_{n=1}^N \\frac{\\beta}{2} (\\vec{w}^T \\phi(x_n) - t_n)^2  +  \\frac{\\alpha}{2} \\sum_{n=1}^N w_n^2 \\right] \\\\\n",
     "     &= \\underset{\\vec{w}}{\\arg \\min} \\left[ \\sum_{n=1}^N \\frac12 (\\vec{w}^T \\phi(x_n) - t_n)^2  +  \\frac12 \\frac{\\alpha}{\\beta} \\left \\| \\vec{w} \\right \\|^2 \\right]\n",
-    "    \\end{align}\n",
+    "    \\end{aligned}\n",
     "    $$\n",
     "    \n",
     "- Exactly the objective in regularized least squares! So\n",
@@ -1055,6 +1055,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [Root]",
    "language": "python",
